Solve exercise 2.4 in latex. Add latex inline docs

--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -336,7 +336,22 @@
     "\n",
     "\\begin{equation*}\n",
     "Q_{n+1}=(1 - \\propto)^n Q_1 + \\sum_{i=1}^{n}\\propto(1-\\propto)^{n-i}R_i \\tag{2.6}\n",
-    "\\end{equation*}"
+    "\\end{equation*}\n",
+    "\n",
+    "### Solution:\n",
+    "---\n",
+    "Let $ \\propto_{n}(a) $ vary with time:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "Q_{n+1}\n",
+    "&= Q_n + \\propto_n(R_n - Q_n) \\\\\n",
+    "&= (1 - \\propto_n)Q_n + \\propto_nR_n \\\\\n",
+    "&= (1 - \\propto_n)(\\propto_{n-1}R_{n-1} + (1 - \\propto_{n-1})Q_{n-1}) + \\propto_nR_n \\\\\n",
+    "&= (1 - \\propto_n)\\propto_{n-1}R_{n-1} + (1 - \\propto_n)(1 - \\propto_{n-1})Q_{n-1} + \\propto_nR_n \\\\\n",
+    "&= (1 - \\propto_n)\\propto_{n-1}R_{n-1} + (1 - \\propto_n)^2\\propto_nR_{n-2} + ... + (1 - \\propto_n)^{n-1}\\propto_nR_1  + (1 - \\propto_n)^nQ_1 + \\propto_nR_n \\\\\n",
+    "&= Q_1\\prod_{i=1}^n(1 - \\propto_i) + \\sum_{i=1}^n(\\propto_iR_i\\prod_{j=i}^n(1 - \\propto_j))\n",
+    "\\end{align*}\n",
+    "\n"
    ]
   },
   {
@@ -345,9 +360,9 @@
    "source": [
     "## Exercise 2.5\n",
     "---\n",
-    "Design and conduct an experiment to demonstrate the difficulties that sample-average methods have for nonstationary problems. Use a modified version of the 10-armed testbed in which all the q<sub>*</sub>(a) start out equal and then take independent random walks (say by adding a normally distributed increment with mean zero and standard deviation 0.01 to all the q<sub>*</sub>(a) on each step).\n",
+    "Design and conduct an experiment to demonstrate the difficulties that sample-average methods have for nonstationary problems. Use a modified version of the 10-armed testbed in which all the $ q_{*}(a) $ start out equal and then take independent random walks (say by adding a normally distributed increment with mean zero and standard deviation 0.01 to all the $ q_{*}(a) $ on each step).\n",
     "\n",
-    "Prepare plots like Figure 2.2 for an action-value method using sample averages, incrementally computed, and another action-value method using a constant step-size parameter, α = 0.1. Use ε = 0.1 and longer runs, say of 10,000 steps."
+    "Prepare plots like Figure 2.2 for an action-value method using sample averages, incrementally computed, and another action-value method using a constant step-size parameter, $ \\propto=0.1 $. Use $ \\epsilon=0.1 $ and longer runs, say of 10,000 steps."
    ]
   },
   {
