--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -753,7 +753,7 @@
     "\n",
     "Softmax Distribution\n",
     "\\begin{equation*}\n",
-    "Pr \\{ A_t=a \\} = \\frac{e^{H_t(a)}}{\\sum_{b=1}^{k}e^{H_t(b)}}\n",
+    "Pr \\{ A_t=a \\} \\doteq \\frac{e^{H_t(a)}}{\\sum_{b=1}^{k}e^{H_t(b)}} \\doteq \\pi_t(a)\n",
     "\\end{equation*}"
    ]
   },
@@ -763,10 +763,57 @@
    "source": [
     "## Exercise 2.9\n",
     "---\n",
-    "Show that in the case of two actions, the soft-maax distribution is the same as that given by the lgoistic, or sigmoid, function often used in statistics and artificial neural networks.\n",
+    "Show that in the case of two actions, the soft-max distribution is the same as that given by the lgoistic, or sigmoid, function often used in statistics and artificial neural networks.\n",
     "\n",
     "### Solution\n",
-    "TODO"
+    "\n",
+    "The logistic function in artificial neural networks is given as:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "f(x) = \\frac{L}{1+e^{-k(x-x_0)}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "$ L $ = maximum value of the curve\n",
+    "\n",
+    "$ k $ = Steepness\n",
+    "\n",
+    "$ x_0 $ = X value of the midpoint.\n",
+    "\n",
+    "\n",
+    "The sigmoid function is the standard logistic function is given as a standard logistic function by:\n",
+    "\n",
+    "$ L = 1 $\n",
+    "\n",
+    "$ k = 1 $\n",
+    "\n",
+    "$ x_0 = 0 $\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "S(x) = \\frac{1}{1+e^{-x}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "In the binary case, we can see that the softmax distribution expands to:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "Pr \\{ A_t=a \\} \\doteq \\frac{e^{H_t(a)}}{e^{H_t(a)} + e^{H_t(b)}}\n",
+    "= \\frac{1}{1 + e^{H_t(b)-H_t(a)}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "Now note that the structure of the exponent in the logistic $ -k(x-x_0) $. Observe that the exponent in the denominator  can be expressed in the same form $ (H_t(b) - H_t(a)) = -(H_t(a)-H_t(b)) $. Substituting the above into the binary softmax equation we obtain the logistic function in standard form:\n",
+    "\\begin{align*}\n",
+    "\\frac{1}{1 + e^{-(H_t(a)-H_t(b))}} = f(x)\n",
+    "\\end{align*}\n",
+    "\n",
+    "And let:\n",
+    "\n",
+    "$ x = H_t(a) - H_t(b) $\n",
+    "\n",
+    "to place the equation in the form of the sigmoid:\n",
+    "\\begin{align*}\n",
+    "&= \\frac{1}{1 + e^{-x}} = S(x)\n",
+    "\\end{align*}\n"
    ]
   },
   {
