Add question for E2.7

--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -620,6 +620,19 @@
    "source": [
     "## Exercise 2.7: Unbiased Constant Step Size Trick\n",
     "---\n",
+    "Throughout most of the chapter we have used sample averages to estimate action values because sample averages do not produce the initial bias that constant step sizes do. However, sample averages are not a completely satisfactory solution because they may perform poorly on onstationary problems. Is it possible to avoid the bias of constant step sizes while on non-stationary problems? One way is to use a step size of:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\beta_n \\doteq \\frac{\\alpha}{\\bar{o}_n}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "to process the nth reward for a particular action, where $ \\alpha > 0 $ is a conventional constant step size, and $ \\bar{o}_n $ is a trace of one that starts at 0:\n",
+    "\n",
+    "$ \\bar{o}_n \\doteq \\bar{o}_{n-1} + \\alpha(1 - \\bar{o}_{n-1}) $ , for $ n \\geq 0 $ , with $ \\bar{o}_0 \\doteq 0 $.\n",
+    "\n",
+    "Carry out an analysis like that in (2.6) to show that $ Q_n $ is an exponential recency-weighted average *without initial bias*.\n",
+    "\n",
+    "### Solution:\n",
     "TODO"
    ]
   },
@@ -755,6 +768,15 @@
     "\\begin{equation*}\n",
     "Pr \\{ A_t=a \\} \\doteq \\frac{e^{H_t(a)}}{\\sum_{b=1}^{k}e^{H_t(b)}} \\doteq \\pi_t(a)\n",
     "\\end{equation*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Implement Gradient Bandit"
    ]
   },
   {
