--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -356,24 +356,24 @@
    "source": [
     "## Exercise 2.4\n",
     "---\n",
-    "If the step-size parameters, $ \\propto_n $, are not constant, then the estimate $ Q_n $ is a weighted average of previously received rewards with a weighting different from that given by (2.6). What is the weighting on each prior reward for the general case, analogous to (2.6), in terms of the sequence of step-size parameters?  \n",
+    "If the step-size parameters, $ \\alpha_n $, are not constant, then the estimate $ Q_n $ is a weighted average of previously received rewards with a weighting different from that given by (2.6). What is the weighting on each prior reward for the general case, analogous to (2.6), in terms of the sequence of step-size parameters?  \n",
     "\n",
     "\\begin{equation*}\n",
-    "Q_{n+1}=(1 - \\propto)^n Q_1 + \\sum_{i=1}^{n}\\propto(1-\\propto)^{n-i}R_i \\tag{2.6}\n",
+    "Q_{n+1}=(1 - \\alpha)^n Q_1 + \\sum_{i=1}^{n}\\alpha(1-\\alpha)^{n-i}R_i \\tag{2.6}\n",
     "\\end{equation*}\n",
     "\n",
     "### Solution:\n",
     "---\n",
-    "Let $ \\propto_{n}(a) $ vary with time:\n",
+    "Let $ \\alpha_{n}(a) $ vary with time:\n",
     "\n",
     "\\begin{align*}\n",
     "Q_{n+1}\n",
-    "&= Q_n + \\propto_n[R_n - Q_n] \\\\\n",
-    "&= (1 - \\propto_n)Q_n + \\propto_nR_n \\\\\n",
-    "&= (1 - \\propto_n)(\\propto_{n-1}R_{n-1} + (1 - \\propto_{n-1})Q_{n-1}) + \\propto_nR_n \\\\\n",
-    "&= (1 - \\propto_n)\\propto_{n-1}R_{n-1} + (1 - \\propto_n)(1 - \\propto_{n-1})Q_{n-1} + \\propto_nR_n \\\\\n",
-    "&= (1 - \\propto_n)\\propto_{n-1}R_{n-1} + (1 - \\propto_n)^2\\propto_nR_{n-2} + ... + (1 - \\propto_n)^{n-1}\\propto_nR_1  + (1 - \\propto_n)^nQ_1 + \\propto_nR_n \\\\\n",
-    "&= Q_1\\prod_{i=1}^n(1 - \\propto_i) + \\sum_{i=1}^n(\\propto_iR_i\\prod_{j=i}^n(1 - \\propto_j))\n",
+    "&= Q_n + \\alpha_n[R_n - Q_n] \\\\\n",
+    "&= (1 - \\alpha_n)Q_n + \\alpha_nR_n \\\\\n",
+    "&= (1 - \\alpha_n)(\\alpha_{n-1}R_{n-1} + (1 - \\alpha_{n-1})Q_{n-1}) + \\alpha_nR_n \\\\\n",
+    "&= (1 - \\alpha_n)\\alpha_{n-1}R_{n-1} + (1 - \\alpha_n)(1 - \\alpha_{n-1})Q_{n-1} + \\alpha_nR_n \\\\\n",
+    "&= (1 - \\alpha_n)\\alpha_{n-1}R_{n-1} + (1 - \\alpha_n)^2\\alpha_nR_{n-2} + ... + (1 - \\alpha_n)^{n-1}\\alpha_nR_1  + (1 - \\alpha_n)^nQ_1 + \\alpha_nR_n \\\\\n",
+    "&= Q_1\\prod_{i=1}^n(1 - \\alpha_i) + \\sum_{i=1}^n(\\alpha_iR_i\\prod_{j=i}^n(1 - \\alpha_j))\n",
     "\\end{align*}\n",
     "\n"
    ]
@@ -386,7 +386,7 @@
     "---\n",
     "Design and conduct an experiment to demonstrate the difficulties that sample-average methods have for nonstationary problems. Use a modified version of the 10-armed testbed in which all the $ q_{*}(a) $ start out equal and then take independent random walks (say by adding a normally distributed increment with mean zero and standard deviation 0.01 to all the $ q_{*}(a) $ on each step).\n",
     "\n",
-    "Prepare plots like Figure 2.2 for an action-value method using sample averages, incrementally computed, and another action-value method using a constant step-size parameter, $ \\propto=0.1 $. Use $ \\epsilon=0.1 $ and longer runs, say of 10,000 steps."
+    "Prepare plots like Figure 2.2 for an action-value method using sample averages, incrementally computed, and another action-value method using a constant step-size parameter, $ \\alpha=0.1 $. Use $ \\epsilon=0.1 $ and longer runs, say of 10,000 steps."
    ]
   },
   {
@@ -882,7 +882,7 @@
    "source": [
     "## Exercise 2.11\n",
     "---\n",
-    "Make a figure analogous to Figure 2.6 for the nonstationary case outlined in Exercise 2.5. Include the constant-step-size $ \\epsilon $-greedy algorithm with $ \\propto=0.1 $. Use runs of 200,000 steps and, as a performance measure for each algorithm and parameter setting, use the average reward over the last 100,000 steps"
+    "Make a figure analogous to Figure 2.6 for the nonstationary case outlined in Exercise 2.5. Include the constant-step-size $ \\epsilon $-greedy algorithm with $ \\alpha=0.1 $. Use runs of 200,000 steps and, as a performance measure for each algorithm and parameter setting, use the average reward over the last 100,000 steps"
    ]
   },
   {
