--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -354,6 +354,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Tracking a Nonstationary Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 2.4\n",
     "---\n",
     "If the step-size parameters, $ \\alpha_n $, are not constant, then the estimate $ Q_n $ is a weighted average of previously received rewards with a weighting different from that given by (2.6). What is the weighting on each prior reward for the general case, analogous to (2.6), in terms of the sequence of step-size parameters?  \n",
