--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -191,7 +191,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Violin Plot\n",
+    "# The 10-Armed Testbed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Violin Plot\n",
     "---"
    ]
   },
@@ -234,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Figure 2.2\n",
+    "## Figure 2.2\n",
     "---"
    ]
   },
