--- a/ch2/K-Armed_Bandits.ipynb
+++ b/ch2/K-Armed_Bandits.ipynb
@@ -634,7 +634,7 @@
    "source": [
     "## Exercise 2.7: Unbiased Constant Step Size Trick\n",
     "---\n",
-    "Throughout most of the chapter we have used sample averages to estimate action values because sample averages do not produce the initial bias that constant step sizes do. However, sample averages are not a completely satisfactory solution because they may perform poorly on onstationary problems. Is it possible to avoid the bias of constant step sizes while on non-stationary problems? One way is to use a step size of:\n",
+    "Throughout most of the chapter we have used sample averages to estimate action values because sample averages do not produce the initial bias that constant step sizes do. However, sample averages are not a completely satisfactory solution because they may perform poorly on nonstationary problems. Is it possible to avoid the bias of constant step sizes while on non-stationary problems? One way is to use a step size of:\n",
     "\n",
     "\\begin{equation*}\n",
     "\\beta_n \\doteq \\frac{\\alpha}{\\bar{o}_n}\n",
@@ -647,7 +647,7 @@
     "Carry out an analysis like that in (2.6) to show that $ Q_n $ is an exponential recency-weighted average *without initial bias*.\n",
     "\n",
     "### Solution:\n",
-    "TODO"
+    "$ \\beta_1 = 1 $ given $ \\bar{o}_0 \\doteq 0 $, and $ \\frac{\\alpha}{\\alpha} = 1 $ and converges to $ \\alpha $ as successive steps are taken. Since $ \\beta_1 = 1 $ the  reward is fully represented by the full weight and the step-size goes on to converge to the true underlying step-size $ \\alpha $ after which it behaves as constant-step size while avoiding the initial bias."
    ]
   },
   {
