--- a/ch3/Finite_Markov_Decision_Processes.ipynb
+++ b/ch3/Finite_Markov_Decision_Processes.ipynb
@@ -261,20 +261,25 @@
     "\n",
     "### Solution:\n",
     "---\n",
-    "Discretizing the above pole-balancing as episodes results in the formula that fails at terminal step K.\n",
+    "Discretizing the above pole-balancing as episodes results in the formula that fails at terminal step $ T $. So the formula for the continuous case of discounted expected returns will need to be fit to the episodic case:\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "G_{t}=\\sum_{k=0}^{ \\infty }\\gamma^{k}R_{t+k+1}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "We know that the reward of the terminal state $ R_{T} = -1 $. We can use this to determine that the value of $ k $ at $ T $ must be $ k = T - t - 1 $ as $ R_{t+k+1} = R_{t + (T - t - 1) + 1} = R_{T} = -1 $. Therefore the value $ T - t - 1 $ is the terminal reward relative to $ t $ giving:\n",
     "\n",
     "\\begin{equation*}\n",
     "G_{t}=\\sum_{k=0}^{T-t-1}\\gamma^{k}R_{t+k+1}\n",
     "\\end{equation*}\n",
     "\n",
-    "However, given that all rewards except the final reward of -1 is 0, we can remove the sum and evaluate the terminal case such that when $ k = T - t - 1 $ then  $ R_{t+k+1} = R_{t + (T - t - 1) + 1} = R_{T} = -1 $\n",
-    "\n",
+    "Given that all rewards except the terminal reward evaluate to 0, we can use the knowledge that $ R_{T} = -1 $ and can strip the summation resolving the equation to just the final state. \n",
     "\n",
     "\\begin{equation*}\n",
-    "G_{t}=-\\gamma^{T}\n",
+    "G_{t}=\\gamma^{T-t-1}R_{T}=-\\gamma^{T-t-1}\n",
     "\\end{equation*}\n",
     "\n",
-    "Where in the limit the terminal episodic state $ T $ is equivalent to $ K $ being the number of steps until failure"
+    "Where in the limit the terminal episodic state $ T $ is equivalent to $ K $ being the number of steps until failure and therefore will have equivalent long-run expected returns."
    ]
   },
   {
